fixing-gaps

--- a/style.css
+++ b/style.css
@@ -819,10 +819,6 @@
     height: 150px;
   }
 
-  .main-other-member {
-    gap: 0;
-  }
-
   .dream {
     padding: 1.5rem;
   }
